# Crisis-Compass

./: .env.example  .gitignore  README.md  explained.md  main.py  opencode.md  pyproject.toml  requirements.txt  server.py  systemprompt.txt  test.ipynb
Query identifier/: queryagent.py
crisis-compass-app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
crisis-compass-app/src/components/: CrisisForm.tsx
crisis-compass-app/src/screens/: AlertsScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  ResourcesScreen.tsx
crisis-compass-app/src/services/: api.ts  config.ts
