[project]
name = "usaii-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openrouter>=0.2.3",
    "pandas>=3.0.3",
    "serpapi>=1.0.2",
    "uvicorn>=0.49.0",
    "fpdf2>=2.7.9",
    "qrcode>=8.0",
    "pillow>=10.3.0",
]
